kubernetes/apps/main/immich/ml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app: immich-machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: http
