kubernetes/apps/main/immich/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
spec:
  type: ClusterIP
  selector:
    app: immich-server
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics-api
      port: 8081
      targetPort: metrics-api
    - name: metrics-ms
      port: 8082
      targetPort: metrics-ms
