kubernetes/apps/main/immich/valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app: immich-valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: valkey
