kubernetes/apps/main/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    lbipam.cilium.io/ips: "10.69.65.25"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - immich.lilstrudel.io
      secretName: immich-tls
  rules:
    - host: immich.lilstrudel.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 80
